@@ -1860,6 +1860,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8898. Create API and command-line argument to get quota and quota
     usage without detailed content summary. (Ming Ma via kihwal)
 
+    HDFS-9706. Log more details in debug logs in BlockReceiver's constructor.
+    (Xiao Chen via Yongjun Zhang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
